Layout fix: re-align search input and button on landing page

--- a/src/scss/module/_search.scss
+++ b/src/scss/module/_search.scss
@@ -18,7 +18,11 @@
   border-radius:0;
 }
 
-.button.search-submit {
+.search-submit {
+  margin-top:0;
+}
+
+.top-bar-search .button.search-submit {
   margin-top: 0.75rem;
 }
 
